--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,7 @@
     <!-- Title -->
     <title>John Sandoval</title>
     <!-- CSS -->
-    
-    <link rel='stylesheet' href="/main/stylesheets/temp.css" />
     <link rel='stylesheet' href="/main/stylesheets/style.css" />
- 
     <script type="text/javascript">
         oldieishere=false;
         ieishere=false;
@@ -27,14 +24,12 @@
 <body>
     <!--[if lt IE 7]>
         <div id="content" style="margin-top:100px; text-align: center;">
-            <h2>AHOY THERE!</h2>
-            <p>It looks like you have stumbled across my website on a non compatible browser. Please download an awesome browser (I suggest <a href="http://www.mozilla.org/en-US/firefox">Firefox</a> or <a href="https://www.google.com/intl/en/chrome/browser/">Chome</a>) Then revisit my site so you can view it as intended.<br> Otherwise just contact me at <a href="mailto:hello@madebydaryl.co.uk">:hello@madebydaryl.co.uk</a>.</p>
+            <h2>Hello!</h2>
+            <p>It looks like you have stumbled across my website on a non-compatible browser. Please download an compatible browser (I suggest <a href="http://www.mozilla.org/en-US/firefox">Firefox</a> or <a href="https://www.google.com/intl/en/chrome/browser/">Chrome</a>). Please contact me at <a href="mailto:john.x.sandoval@gmail.com">welcome@johnsandoval.us</a>.</p>
         </div>
     <![endif]-->
     <div id="menu">
-        <div id="logo" class="animate">
-            John Sandoval
-        </div>
+        <div id="logo" class="animate">John Sandoval</div>
         <div id="mobileMenu"></div>
         <nav id="nav">
             <a href="#">WORK</a>
@@ -44,7 +39,7 @@
     </div>
 
     <header id="header">
-        <h1>Full stack web developer<br />and<br />data engineer</h1>
+        <h1>Full-stack web developer<br />and<br />data engineer</h1>
     </header>
 
     <div id="contentContainer">
@@ -136,7 +131,7 @@
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">JQuery</a></h3>
-                            <p>I'm mainly used it on the front end, but looking forward to seeing what it can do server side.</p>
+                            <p>I've mainly used it on the front end, but looking forward to seeing what it can do server side.</p>
 
                         </div>
                     </div>
@@ -191,16 +186,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- NGINX -->
-                <div class="workItem" style="width:251px; height:201px; background-image:url('/main/images/nginx.jpg');">
-                    <div>
-                        <div class="mask"></div>
-                        <div class="info">
-                            <h3><a href="#" target="_blank">NGINX</a></h3>
-                            <p>How easy are reverse proxies?! It's been awhile since I've been intreagued by a web server.</p>
-                        </div>
-                    </div>
-                </div>
                 <!-- AngularJS -->
                 <div class="workItem" style="width:219px; height:230px; background-image:url('/main/images/angularjs.jpg');">
                     <div>
@@ -211,33 +196,13 @@
                         </div>
                     </div>
                 </div>
-                <!-- MEAN Stack -->
-                <div class="workItem" style="width:355px; height:142px; background-image:url('/main/images/mean.jpg');">
+                <!-- NGINX -->
+                <div class="workItem" style="width:251px; height:201px; background-image:url('/main/images/nginx.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
-                            <h3><a href="#" target="_blank">MEAN Stack</a></h3>
-                            <p>I was never inspired by LAMP much. I find variations of the MEAN stack thrilling.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Data Warehouse -->
-                <div class="workItem" style="width:272px; height:118px; background-image:url('/main/images/dw.jpg');">
-                    <div>
-                        <div class="mask"></div>
-                        <div class="info">
-                            <h3><a href="#" target="_blank">Data Warehousing</a></h3>
-                            <p>Easy to picture, difficult to execute. OLAP can be retired.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- MySQL -->
-                <div class="workItem" style="width:263px; height:192px; background-image:url('/main/images/mysql.jpg');">
-                    <div class="workItemTable">
-                        <div class="mask"></div>
-                        <div class="info">
-                            <h3><a href="#" target="_blank">MySQL</a></h3>
-                            <p>Pleasant, mostly free, and I actually really like Workbench.</p>
+                            <h3><a href="#" target="_blank">NGINX</a></h3>
+                            <p>How easy are reverse proxies?! It's been awhile since I've been intreagued by a web server.</p>
                         </div>
                     </div>
                 </div>
@@ -251,13 +216,43 @@
                         </div>
                     </div>
                 </div>
-                 <!-- Windows Server -->
+                <!-- MEAN Stack -->
+                <div class="workItem" style="width:355px; height:142px; background-image:url('/main/images/mean.jpg');">
+                    <div>
+                        <div class="mask"></div>
+                        <div class="info">
+                            <h3><a href="#" target="_blank">MEAN Stack</a></h3>
+                            <p>I was never inspired by LAMP much. I find variations of the MEAN stack thrilling.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Bootstrap -->
+                <div class="workItem" style="width:485px; height:104px; background-image:url('/main/images/bootstrap.jpg');">
+                    <div>
+                        <div class="mask"></div>
+                        <div class="info">
+                            <h3><a href="#" target="_blank">Twitter Bootstrap</a></h3>
+                            <p>Easy to use boilerplate for rapid prototyping. Finally getting the hang of the grid.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Windows Server -->
                 <div class="workItem" style="width:352px; height:143px; background-image:url('/main/images/winserver.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">Windows Server</a></h3>
                             <p>You need a lot of tools in the toolbelt for this one ladies and gents. Corporations use it; what are you going to do?</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- MySQL -->
+                <div class="workItem" style="width:263px; height:192px; background-image:url('/main/images/mysql.jpg');">
+                    <div class="workItemTable">
+                        <div class="mask"></div>
+                        <div class="info">
+                            <h3><a href="#" target="_blank">MySQL</a></h3>
+                            <p>Pleasant, mostly free, and I actually really like Workbench.</p>
                         </div>
                     </div>
                 </div>
@@ -271,16 +266,30 @@
                         </div>
                     </div>
                 </div>
+                <!-- Data Warehouse -->
+                <!--div class="workItem" style="width:272px; height:118px; background-image:url('/main/images/dw.jpg');">
+                    <div>
+                        <div class="mask"></div>
+                        <div class="info">
+                            <h3><a href="#" target="_blank">Data Warehousing</a></h3>
+                            <p>Easy to picture, difficult to execute. OLAP can be retired.</p>
+                        </div>
+                    </div>
+                </div-->
 
             </div>
         </section>
         <section>
             <div id="about">
                 <div class="col left">
-                    <img alt="images" src="/main/images/johnsandoval.jpg" style="max-width: 100%; min-width: 100%; height: auto;" />
+                    <div style="float: left; border: 1px solid #000; width: 48%; height: 48%;">a</div>
+                    <div style="float: left; border: 1px solid #000; width: 48%; height: 48%;">b</div>
+                    <div style="clear: both; float: left; border: 1px solid #000; width: 48%; height: 48%;">c</div>
+                    <div style="float: left; border: 1px solid #000; width: 48%; height: 48%;">d</div>
+                    <!--img alt="images" src="/main/images/johnsandoval.jpg" style="max-width: 100%; min-width: 100%; height: auto;" /-->
                 </div>
                 <div class="col right">
-                    <h2>
+                    <h2 class="grey-large dark">
                         Hello!<br>
                         I'm John Sandoval.
                     </h2>
@@ -291,7 +300,15 @@
             </div>
         </section>
         <section>
-            <div class="contactWrapper">
+            <div id="nav-menu-container">
+                <ul id="nav-menu">
+                    <li class="menu-item"><a href="mailto:john.x.sandoval@gmail.com">Email</a></li>
+                    <li class="menu-item"><a href="https://www.linkedin.com/in/johnxsandoval" target="_blank">LinkedIn</a></li>
+                    <li class="menu-item"><a href="#">Projects</a></li>
+                    <li class="menu-item"><a href="#">The Journey</a></li>
+                </ul>
+            </div>
+            <!--div class="contactWrapper">
                 <div id="contact">
                     <article>
                         <div class="article artc1">
@@ -316,7 +333,7 @@
                     <div class="clear"></div>
                 </div>
 
-            </div>
+            </div-->
         </section>
         <% var thisYear = new Date().getFullYear(); %>
         <div class="footer">Copyright &copy; <%= thisYear %> John Sandoval - johnsandoval.us<br>
@@ -328,12 +345,8 @@
     <!--  JavaScript -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="/main/javascripts/purl.js"></script>
-
     <script src="/main/javascripts/masonry.min.js"></script>
     <script src="/main/javascripts/TweenMax.min.js"></script>
-    <script src="/main/javascripts/library.js"></script>
-    <script src="/main/javascripts/main.js"></script>
-
     <script src="/main/javascripts/application.js"></script>
 
 </body>
