--- a/public/main/stylesheets/style.css
+++ b/public/main/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400, 700);
+
 @import url(http://fonts.googleapis.com/css?family=Poiret+One);
 
 /* normalize.css v2.1.0 | MIT License | git.io/normalize */
@@ -321,7 +321,6 @@ a {
     color: #808080;
 }
 body {
-    font-family: 'Raleway',  sans-serif;
     font-size: 62.5%;
     color: #434343;
     -webkit-animation: fadeIn 1s .1s ease both;
@@ -368,6 +367,11 @@ h3 {
     padding: 20px 20px 0;
     font-size: 1.8em;
     font-weight: bold;
+}
+div.grey-large {
+    font-family: 'Poiret One', sans-serif;
+    font-size: 30px;
+    color: #ccc;
 }
 #menu {
     width: 600px;
@@ -435,20 +439,28 @@ h3 {
     color: #363636;
     font-size: 0.30em;
 }
+
+
+
+
 #nav-menu-container {
     position: relative;
+    margin: 0;
+    padding: 0;
     width: 100%;
     clear: both;
 } 
 #nav-menu {
     width: 100%;
+    margin: 0;
+    padding: 0;
     text-align: center;
 }
 .menu-item {
     float: left;
     width: 25%;
     margin: 0;
-    padding: 20px 0;
+    padding: 0;
     text-align: center;
     font-size: 2.50em;
     font-size: 2vw;
@@ -458,11 +470,22 @@ h3 {
     display: block;
     width: 100%;
     height: 100%;
+    padding: 20px 0;
 }
 .menu-item a:hover {
     color: #000000;
     background-color: #404040;
 }
+
+#journey-narrative {
+    padding: 20px;
+}
+
+#journey-narrative p {
+    font-size: 2em;
+    line-height: 1.4em;
+}
+
 #contentContainer {
     width: 100%;
     margin-top: 700px;
@@ -570,74 +593,41 @@ h3 {
     opacity: 0.8;
 }
 #about {
+    position: relative;
     width: 100%;
     height: 495px;
     overflow: hidden;
-    background: #f5f4f4;
+    background: #e1e1e1;
 }
 #about .col {
     float: left;
 }
 #about .col.left {
     height: 100%;
-    width: 48%;
-    margin-right: 5%;
-    overflow: hidden;
+    width: 50%;
 }
 #about .col.right {
     width: 40%;
     padding-right: 7%}
-#about img {
+/*#about img {
     width: 100%;
     margin-top: -5%;
     min-width: 707px;
     position: relative;
-}
+}*/
 #about h2 {
     padding: 75px 0 0 0;
     text-align: left;
     font-size: 5.7em;
     line-height: 0.9em;
 }
-#about p, #about li {
+#about p {
     padding: 75px 0 0 0;
     text-align: left;
 
     font-size: 2.5em;
     line-height: 1.4em;
     color: #202020;
-}
-#contact {
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
-}
-#contact .article {
-    float: left;
-    width: 48%}
-#contact .artc2 {
-    width: 38%;
-    padding-left: 10%}
-#contact h2 {
-    text-align: left;
-}
-#contact {
-    padding: 40px 0;
-}
-.contactWrapper {
-    width: 100%;
-    background: #181818;
-}
-.contactWrapper p, .contactWrapper li {
-    color: #6d6d6d !important;
-    padding-top: 2px;
-}
-.contactWrapper a {
-    font-weight: bold;
-    letter-spacing: 1px;
-}
-.contactWrapper h2, .contactWrapper h3 {
-    color: #8e8e8e !important;
 }
 .footer {
     clear: both;
@@ -799,9 +789,6 @@ p, li {
     padding: 15px 0 !important;
     float: none !important;
     width: 100% !important;
-}
-#contact p, #contact li {
-    padding: 5px 20px;
 }
 }@media (max-width: 450px) {
     h1 {
