--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,6 @@
 
-<!DOCTYPE html>
-<html lang="en">
+<% include header %>
 
-<head>
-    <!-- Meta -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <!-- Title -->
-    <title>John Sandoval</title>
-    <!-- CSS -->
-    <link rel='stylesheet' href="/main/stylesheets/application.css" />
-    <script type="text/javascript">
-        oldieishere = false;
-        ieishere = false;
-    </script>
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-        <script src="/javascripts/html5shiv.js"></script>
-        <script src="/javascripts/respond.min.js"></script>
-    <![endif]-->
-</head>
 <body>
 
     <!--[if lt IE 7]>
@@ -46,15 +26,15 @@
 
     <div id="content-container">
         <!-- My Skills -->
-        <section id="work">
+        <section id="skills">
 
             <h2 class="custom-font">Learned and Learning</h2>
 
-            <div id="workPreview" class="animate-width">
+            <div id="skills-preview" class="animate-width">
                 
                 <!-- JavaScript -->
-                <div class="workItem" style="width:225px; height:225px; background-image:url('/main/images/javascript.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:225px; height:225px; background-image:url('/main/images/javascript.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">JavaScript</a></h3>
@@ -63,8 +43,8 @@
                     </div>
                 </div>
                  <!-- HTML5 + CSS3 -->
-                <div class="workItem" style="width:287px; height:175px; background-image:url('/main/images/html-css.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:287px; height:175px; background-image:url('/main/images/html-css.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">HTML5 + CSS3</a></h3>
@@ -73,8 +53,8 @@
                     </div>
                 </div>
                 <!-- AWS -->
-                <div class="workItem" style="width:244px; height:100px; background-image:url('/main/images/aws.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:244px; height:100px; background-image:url('/main/images/aws.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">Amazon Web Services</a></h3>
@@ -83,8 +63,8 @@
                     </div>
                 </div>
                 <!-- Oracle -->
-                <div class="workItem" style="width:514px; height:98px; background-image:url('/main/images/oracle.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:514px; height:98px; background-image:url('/main/images/oracle.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#">Oracle PL/SQL</a></h3>
@@ -93,8 +73,8 @@
                     </div>
                 </div>
                 <!-- SAS -->
-                <div class="workItem" style="width:351px; height:144px; background-image:url('/main/images/sas.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:351px; height:144px; background-image:url('/main/images/sas.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">SAS</a></h3>
@@ -104,8 +84,8 @@
                     </div>
                 </div>
                 <!-- Mongoose -->
-                <div class="workItem" style="width:160px; height:160px; background-image:url('/main/images/mongoose.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:160px; height:160px; background-image:url('/main/images/mongoose.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">Mongoose</a></h3>
@@ -114,8 +94,8 @@
                     </div>
                 </div>
                 <!-- JQuery -->
-                <div class="workItem" style="width:225px; height:225px; background-image:url('/main/images/jquery.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:225px; height:225px; background-image:url('/main/images/jquery.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">JQuery</a></h3>
@@ -125,8 +105,8 @@
                     </div>
                 </div>
                 <!-- Git -->
-                <div class="workItem" style="width:225px; height:225px; background-image:url('/main/images/git.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:225px; height:225px; background-image:url('/main/images/git.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">Git</a></h3>
@@ -135,7 +115,7 @@
                     </div>
                 </div>
                 <!-- NodeJS -->
-                <div class="workItem" style="width:318px; height:159px; background-image:url('/main/images/nodejs.jpg');">
+                <div class="skill-item" style="width:318px; height:159px; background-image:url('/main/images/nodejs.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -145,8 +125,8 @@
                     </div>
                 </div>
                 <!-- SQL Server -->
-                <div class="workItem" style="width:248px; height:203px; background-image:url('/main/images/mssqlserver.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:248px; height:203px; background-image:url('/main/images/mssqlserver.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">MS SQL Server</a></h3>
@@ -155,8 +135,8 @@
                     </div>
                 </div>
                 <!-- MongoDB -->
-                <div class="workItem" style="width:389px; height:129px;  background-image:url('/main/images/mongodb.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:389px; height:129px;  background-image:url('/main/images/mongodb.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">MongoDB</a></h3>
@@ -165,7 +145,7 @@
                     </div>
                 </div>
                 <!-- OAuth -->
-                <div class="workItem" style="width:225px; height:224px; background-image:url('/main/images/oauth.jpg');">
+                <div class="skill-item" style="width:225px; height:224px; background-image:url('/main/images/oauth.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -175,7 +155,7 @@
                     </div>
                 </div>
                 <!-- AngularJS -->
-                <div class="workItem" style="width:219px; height:230px; background-image:url('/main/images/angularjs.jpg');">
+                <div class="skill-item" style="width:219px; height:230px; background-image:url('/main/images/angularjs.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -185,7 +165,7 @@
                     </div>
                 </div>
                 <!-- NGINX -->
-                <div class="workItem" style="width:251px; height:201px; background-image:url('/main/images/nginx.jpg');">
+                <div class="skill-item" style="width:251px; height:201px; background-image:url('/main/images/nginx.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -195,7 +175,7 @@
                     </div>
                 </div>
                 <!-- OpenID -->
-                <div class="workItem" style="width:355px; height:142px; background-image:url('/main/images/openid.jpg');">
+                <div class="skill-item" style="width:355px; height:142px; background-image:url('/main/images/openid.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -205,7 +185,7 @@
                     </div>
                 </div>
                 <!-- MEAN Stack -->
-                <div class="workItem" style="width:355px; height:142px; background-image:url('/main/images/mean.jpg');">
+                <div class="skill-item" style="width:355px; height:142px; background-image:url('/main/images/mean.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -215,7 +195,7 @@
                     </div>
                 </div>
                 <!-- Bootstrap -->
-                <div class="workItem" style="width:485px; height:104px; background-image:url('/main/images/bootstrap.jpg');">
+                <div class="skill-item" style="width:485px; height:104px; background-image:url('/main/images/bootstrap.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -225,7 +205,7 @@
                     </div>
                 </div>
                 <!-- Windows Server -->
-                <div class="workItem" style="width:352px; height:143px; background-image:url('/main/images/winserver.jpg');">
+                <div class="skill-item" style="width:352px; height:143px; background-image:url('/main/images/winserver.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -235,8 +215,8 @@
                     </div>
                 </div>
                 <!-- MySQL -->
-                <div class="workItem" style="width:263px; height:192px; background-image:url('/main/images/mysql.jpg');">
-                    <div class="workItemTable">
+                <div class="skill-item" style="width:263px; height:192px; background-image:url('/main/images/mysql.jpg');">
+                    <div class="skill-item-table">
                         <div class="mask"></div>
                         <div class="info">
                             <h3><a href="#" target="_blank">MySQL</a></h3>
@@ -245,7 +225,7 @@
                     </div>
                 </div>
                 <!-- Linux -->
-                <div class="workItem" style="width:291px; height:173px; background-image:url('/main/images/linux.jpg');">
+                <div class="skill-item" style="width:291px; height:173px; background-image:url('/main/images/linux.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -255,7 +235,7 @@
                     </div>
                 </div>
                 <!-- Data Warehouse -->
-                <!--div class="workItem" style="width:272px; height:118px; background-image:url('/main/images/dw.jpg');">
+                <!--div class="skill-item" style="width:272px; height:118px; background-image:url('/main/images/dw.jpg');">
                     <div>
                         <div class="mask"></div>
                         <div class="info">
@@ -276,15 +256,23 @@
                 <div id="about-img" class="col left">
                     <div class="quad text-right">
                         <img alt="tile1" src="/main/images/sunset2.jpg" />
+                        <div class="corner-bottom-right"></div>
+                        <div class="quad-mask"></div>
                     </div>
                     <div class="quad text-left">
                         <img alt="tile2" src="/main/images/john1.jpg" />
+                        <div class="corner-bottom-left"></div>
+                        <div class="quad-mask"></div>
                     </div>
                     <div class="quad clear text-right">
                         <img alt="tile3" src="/main/images/john2.jpg" />
+                        <div class="corner-top-right"></div>
+                        <div class="quad-mask"></div>
                     </div>
                     <div class="quad text-left">
                         <img alt="tile4" src="/main/images/sunset1.jpg" />
+                        <div class="corner-top-left"></div>
+                        <div class="quad-mask"></div>
                     </div>
                 </div>
 
@@ -299,31 +287,4 @@
 
         </section>
 
-        <!-- Navigation Menu -->
-        <div id="nav-menu-container">
-            <ul id="nav-menu">
-                <li class="menu-item"><a href="mailto:john.x.sandoval@gmail.com">Email</a></li>
-                <li class="menu-item"><a href="https://www.linkedin.com/in/johnxsandoval" target="_blank">LinkedIn</a></li>
-                <li class="menu-item"><a href="#">Projects</a></li>
-                <li class="menu-item"><a href="/journey">The Journey</a></li>
-            </ul>
-        </div>
-
-        <% var thisYear = new Date().getFullYear(); %>
-        <!-- Page Footer -->
-        <div id="footer">
-            <div class="copyright">Copyright &copy; <%= thisYear %> John Sandoval - johnsandoval.us</div>
-            <div class="signature">HTML5 | CSS3 | JavaScript | JQuery | Full Stack Development | SQL | SAS | BI | Enterprise Reporting | NoSQL | Data Engineering</div>
-        </div>
-
-    </div>
-
-    <!--  JavaScript -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="/main/javascripts/purl.js"></script>
-    <script src="/main/javascripts/masonry.min.js"></script>
-    <script src="/main/javascripts/TweenMax.min.js"></script>
-    <script src="/main/javascripts/application.js"></script>
-    
-</body>
-</html>
+<% include footer %>
