--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,7 +8,8 @@
     <!-- Title -->
     <title>John Sandoval</title>
     <!-- CSS -->
-    <link rel='stylesheet' href="/main/stylesheets/application.min.css" />
+    <link rel='stylesheet' href="/main/stylesheets/application.css" />
+    <link rel='stylesheet' href="/main/stylesheets/application-mq.css" />
     <script type="text/javascript">
         oldieishere = false;
         ieishere = false;
