--- a/public/main/stylesheets/application.css
+++ b/public/main/stylesheets/application.css
@@ -1,4 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Poiret+One);
+@font-face {
+    font-family: 'Poiret One';
+    src: url('/main/fonts/PoiretOne-Regular.ttf');
+}
 
 /*********************/
 /** GLOBAL - RESETS **/
@@ -8,7 +11,7 @@ html {
     height: 100%;
     padding: 0px;
     margin: 0px;
-    font-family: sans-serif;
+    font-family: 'Calibri', 'Verdana', sans-serif;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
 }
@@ -56,7 +59,8 @@ a img {
     color: #202020;
 }
 .custom-font {
-    font-family: 'Poiret One', sans-serif;
+    font-family: 'Poiret One', 'Calibri', 'Verdana', sans-serif;
+    font-weight: lighter;
 }
 .dark-bg {
     background-color: #202020;
@@ -146,9 +150,7 @@ a img {
     margin: 0;
     padding: 0;
     text-align: center;
-    font-size: 2.50em;
-    font-size: 2vw;
-    font-family: 'Poiret One', sans-serif;
+    font-size: 3.5em;
     list-style: none;
 }
 .menu-item a {
@@ -313,10 +315,8 @@ a img {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
-    font-family: 'Poiret One', sans-serif;
     color: #FFFFFF;
     font-size: 7em;
-    font-weight: bold;
     line-height: 0.8em;
     -webkit-animation: fadeInUp .6s .5s ease both;
     -moz-animation: fadeInUp .6s .5s ease both;
@@ -348,14 +348,17 @@ a img {
     padding-top: 75px;
     padding-bottom: 50px;
     font-size: 5em;
-    font-weight: bold;
     color: #808080;
 }
 #skills-preview {
-    min-width: 360px !important;
+    min-width: 320px !important;
     margin: 0 auto;
     margin-top: 30px;
     position: relative;
+    overflow: hidden;
+}
+.grid-sizer {
+    width: 85px;
 }
 .skill-item {
     float: left;
@@ -366,6 +369,7 @@ a img {
     background-position: 50% 50%;
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    width: auto;
     -webkit-transition-property: background-size;
     -moz-transition-property: background-size;
     -o-transition-property: background-size;
@@ -386,8 +390,11 @@ a img {
     display: table;
     width: 100%;
     height: 100%}
-.skill-item.hover {
-    background-size: 104% 104%
+.skill-item.skill-hover {
+    background-size: 105% 105%;
+}
+.skill-item.skill-hover a:hover {
+    color: #66CCFF !important;
 }
 .skill-item img, .skill-item .mask {
     z-index: 1;
@@ -443,6 +450,7 @@ a img {
 #about h2 {
     text-align: left;
     font-size: 5.7em;
+    font-weight: bold;
     line-height: 0.9em;
 }
 #about p {
@@ -502,175 +510,6 @@ a img {
     transition-timing-function: ease-in-out;
 }
 
-/*******************************/
-/** MAIN PAGE - MEDIA QUERIES **/
-/*******************************/
-@media (max-width: 1279px) {
-    #about {
-        height: 427px;
-    }
-    #about h2 {
-        font-size: 4.5em;
-        line-height: 1.1em;
-    }
-    #about p {
-        padding: 35px 0 0 0;
-        font-size: 2.2em;
-    }
-}
-@media (max-width: 1024px) {
-    #header h1 {
-        font-size: 6em;
-    }
-    #work {
-        width: 100%
-    }
-    #work h2 {
-        font-size: 4.3em;
-    }
-    #about {
-        height: 380px;
-    }
-    #about .col.right {
-        width: 45%;
-        padding-right: 0%
-    }
-    #about h2 {
-        font-size: 3.3em;
-        line-height: 1.1em;
-    }
-    #about p {
-        padding: 35px 0 0 0;
-        font-size: 1.9em;
-    }
-}
-@media (max-width: 767px) {
-    #header h1 {
-        font-size: 5em;
-    }
-    #work h2 {
-        font-size: 4em;
-    }
-    #about {
-        width: 100%;
-        height: auto;
-    }
-    #about .col {
-        float: none;
-    }
-    #about .col.left {
-        height: 100%;
-        width: 100%;
-        overflow: hidden;
-    }
-    #about .col.right {
-        width: 100%
-    }
-    #about h2 {
-        padding: 35px 20px;
-    }
-    #about p {
-        padding: 0 20px 35px;
-    }
-    #about-img {
-        display: none;
-    }
-    #nav-menu .menu-item {
-        font-size: 2.5vw;
-    }
-}
-@media (max-width: 750px) {
-    #header {
-        position: absolute;
-        height: 300px;
-    }
-    #header h1 {
-        line-height: 1.2em;
-        font-size: 4em;
-    }
-    #work h2 {
-        padding-top: 38px;
-        padding-bottom: 20px;
-        font-size: 3em;
-        text-align: center !important;
-    }
-    p, li {
-        text-align: center !important;
-    }
-    #menu {
-        width: 100%;
-        padding-top: 10px;
-        left: 0;
-        margin: 0;
-    }
-    #logo {
-        width: 154px;
-        height: 54px;
-        left: 0;
-        margin: 0 20px 0;
-    }
-    #mobile-menu {
-        cursor: pointer;
-        margin-top: 0;
-        display: none;
-        width: 28px;
-        height: 28px;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        background: url("../images/mobilemenu.png") no-repeat;
-    }
-    #nav {
-        display: none;
-    }
-    #workSelector {
-        padding: 24px 0 16px;
-    }
-    #about h2 {
-        padding: 55px 20px 30px;
-        font-size: 2.8em;
-    }
-    #about p {
-        padding-bottom: 55px;
-    }
-    #about-img {
-        display: none;
-    }
-    #nav-menu .menu-item {
-        font-size: 3vw;
-    }
-}
-@media (max-width: 450px) {
-    #header h1 {
-        line-height: 1.2em;
-        font-size: 3em;
-    }
-    #work h2 {
-        font-size: 2em;
-    }
-    #workPreview {
-        min-width: 300px !important;
-    }
-    .workItem {
-        -webkit-transform: scale(0.8);
-        -moz-transform: scale(0.8);
-        -ms-transform: scale(0.8);
-        -o-transform: scale(0.8);
-        transform: scale(0.8);
-        -webkit-transform-origin: 0% 0%;
-        -moz-transform-origin: 0% 0%;
-        -ms-transform-origin: 0% 0%;
-        -o-transform-origin: 0% 0%;
-        transform-origin: 0% 0%
-    }
-    #about-img {
-        display: none;
-    }
-    #nav-menu .menu-item {
-        font-size: 4vw;
-    }
-}
-
 /******************/
 /** JOURNEY PAGE **/
 /******************/
@@ -682,13 +521,11 @@ a img {
     padding-top: 75px;
     padding-bottom: 50px;
     font-size: 5em;
-    font-weight: bold;
     color: #C0C0C0;
 }
 #journey-narrative h3 {
     text-align: left;
     font-size: 3.5em;
-    font-weight: bold;
     color: #C0C0C0;
 }
 #journey-narrative p {
