--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,12 +4,14 @@
     <!-- Meta -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="description" content="John Sandoval | Full-stack web developer and data engineer" />
+    <meta name="robots" content="all" />
     <!-- Title -->
     <title>John Sandoval</title>
     <!-- CSS -->
     <link rel='stylesheet' href="/main/stylesheets/application.css" />
     <link rel='stylesheet' href="/main/stylesheets/application-mq.css" />
+    <link rel="icon" href="/main/images/favicon.ico" type="image/x-icon" />
     <script type="text/javascript">
         oldieishere = false;
         ieishere = false;
