--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,8 +9,7 @@
     <!-- Title -->
     <title>John Sandoval</title>
     <!-- CSS -->
-    <link rel='stylesheet' href="/main/stylesheets/application.css" />
-    <link rel='stylesheet' href="/main/stylesheets/application-mq.css" />
+    <link rel='stylesheet' href="/main/stylesheets/application.min.css" />
     <link rel="icon" href="/main/images/favicon.ico" type="image/x-icon" />
     <script type="text/javascript">
         oldieishere = false;
